<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_description">Android drawer icon with material design animation</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="app_name">找队友</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">搜索</string>
    <!-- 下拉选择菜单-->
    <string name="t11">PS</string>
    <string name="t12">IOS</string>
    <string name="t13">Android</string>
    <string name="t14">外包</string>
    <string name="t15">ACM</string>
    <string name="t16">视频</string>
    <string name="t17">APP设计</string>
    <string name="t18">软件编程</string>
    <string name="t19">移动终端</string>
    <string name="t21">A</string>
    <string name="t22">B</string>
    <string name="t23">C</string>
    <string name="t24">D</string>
    <string name="t31">A</string>
    <string name="t32">B</string>
    <string name="t33">C</string>
    <string name="t34">D</string>
    <string name="t41">A</string>
    <string name="t42">B</string>
    <string name="t43">C</string>
    <string name="t44">D</string>
    <string name="to_exit">再按一次返回键退出</string>

    <string name="string_number">请选择</string>
    <string name="string_year">年</string>
    <string name="string_month">月</string>
    <string name="string_day">日</string>

    <string name="new_message_notify_content">你有%1$2d条新消息</string>
    <string name="kickout">您的帐号已在其它设备登录</string>

    <!--阿里悟空相关-->
    <string name="network_error">连接失败，请检查你的网络后重试!</string>

    <string name="sure">确定</string>

    <string name="close_tips">再按一次退出程序</string>
    <string name="quit_confirm">确定要退出吗？</string>

    <!-- 登录 -->
    <string name="login">登录</string>
    <string name="login_accountHint">账号</string>
    <string name="login_passwordHint">密码</string>
    <string name="login_register">新用户注册</string>
    <string name="login_invalid_account">帐号错误</string>
    <string name="login_invalid_account_format">帐号格式错误，请输入数字</string>
    <string name="logining">登录中...</string>
    <string name="login_success">登陆成功</string>
    <string name="login_failed">登陆失败</string>
    <string name="login_next">下一步</string>

    <!-- 注册 -->
    <string name="signup">注册</string>
    <string name="signup_accountHint">帐号</string>
    <string name="signup_passwordHint">密码</string>
    <string name="signup_confirm_passwordHint">确认密码</string>
    <string name="signup_invalid_account">用户名无效</string>
    <string name="signup_invalid_password">密码不匹配</string>
    <string name="signuping">注册中...</string>
    <string name="signup_success">注册成功</string>
    <string name="signup_failed">注册失败</string>

    <string name="action_group_chat">发起聊天</string>
    <string name="action_quit">退出登录</string>
    <string name="action_setting">设置</string>

    <string name="btn_ok">确定</string>
    <string name="btn_back">返回</string>
    <string name="btn_cancel">取消</string>

    <string name="chat_create_title">发起聊天</string>
    <string name="chat_create_openIdHint">请输入openId，空格分隔</string>
    <string name="chat_create_invalid_openId">请输入有效的openId</string>
    <string name="chat_create_doing">正在创建会话...</string>
    <string name="chat_create_fail">会话创建失败</string>

    <string name="chat_create_sysmsg">%1$s&#160;&#160;发起了群聊</string>
    <string name="chat_create_single_msg">%1$s&#160;&#160;发起了聊天</string>

    <string name="chat_create_tips">输入单个openId可发起单聊，输入多个openId可发起群聊</string>


    <string name="actionbar_tab_conversation">聊天</string>
    <string name="actionbar_tab_contact">通讯录</string>
    <string name="conversation_delete">删除</string>
    <string name="chat_sure">确定</string>
    <string name="chat_cancel">取消</string>
    <string name="chat_back">返回</string>
    <string name="chat_send_text">发送</string>
    <string name="chat_hint_text">输入文字</string>
    <string name="chat_unsupport_message">抱歉，该消息类型不支持</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- 会话消息 -->
    <string name="calendar_yesterday">昨天</string>
    <string name="calendar_morning">上午</string>
    <string name="calendar_afternoon">下午</string>
    <string name="calendar_just_now">刚刚</string>
    <string name="load_data">数据加载中%1$s...</string>
    <string name="load_data1">数据加载中...</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="delete_promotion">确定删除吗?</string>
    <string name="chat_item_unread_tips">未读</string>
    <string name="group_item_unread_tips">%1$d人未读</string>
    <string name="chat_item_read_tips">已读</string>
    <string name="select_image_dlg_tips">选择图片来源</string>
    <string name="select_image_err_tips">选择图片失败,请重新选择</string>
    <string name="menu_conversation_quit">退出该聊</string>
    <string name="message_conversation_quit">%1$s&#160;&#160;已经退出群聊</string>
    <string name="err_conversation_quit">退群失败</string>

    <string name="sending">正在发送</string>
    <string name="send_fail">发送失败</string>
    <string name="login_timer">接收短信大约需要%1$2d秒</string>
    <string name="input_verify_code">输入验证码</string>
    <string name="login_phone_notice">"已发送 验证码 到上面这个手机"</string>
    <string name="coming_soon">"敬请期待"</string>
    <string name="chat_input_edit_hint">输入文字...</string>
    <string name="chat_input_button_send">发送</string>

    <string name="create_conversation">聊天</string>
    <string name="free_calling">免费通话</string>
    <string name="profile_data_loading">正在加载个人信息</string>
    <string name="user_profile_personal_title">个人信息</string>
    <string name="user_profile_avator">头像</string>
    <string name="user_profile_name">姓名</string>
    <string name="user_profile_nick">昵称</string>
    <string name="user_profile_gender">性别</string>
    <string name="user_profile_birthday">生日</string>
    <string name="user_profile_mobile">手机号</string>
    <string name="user_profile_city">城市</string>
    <string name="user_profile_company">工作单位</string>
    <string name="user_profile_label">个性签名</string>
    <string name="header_edit_profile">请设置你的个人资料</string>
    <string name="in_my_local_contact">我的手机通讯录</string>
    <string name="confirm_ok">确认</string>
    <string name="nick_default">例如：张三</string>
    <string name="action_edit">编辑</string>
    <string name="profile_nick_hint">昵称长度在1-%d个字符之间</string>
    <string name="profile_nick_not_null">昵称不能全是空格</string>
    <string name="my_profile_nick">修改昵称</string>
    <string name="my_profile_label">修改签名</string>
    <string name="my_profile_city">修改城市</string>
    <string name="my_profile_company">修改工作单位</string>

    <!-- 视频通话 -->
    <string name="chat_send_voip_text">语音通话</string>
    <string name="hung_up">挂断</string>
    <string name="video_call_answer">接听</string>
    <string name="audio_only">切换为语音接听</string>
    <string name="handsfree">免提</string>
    <string name="silence">静音</string>
    <string name="video_waiting">等待对方回应&#8230;</string>
    <string name="video_answering">对方即将接听&#8230;</string>
    <string name="video_invite">邀请你视频聊天&#8230;</string>
    <string name="audio_invite">邀请你语音聊天&#8230;</string>
    <string name="video_talking">正在视频聊天&#8230;</string>
    <string name="audio_talking">正在语音聊天&#8230;</string>
    <string name="video_is_cancle">通话已取消</string>
    <string name="audio_only_tip">已切换为语音聊天模式,请用听筒接听</string>
    <string name="audio_only_tip_other">对方已切换为语音聊天模式，请用听筒接听</string>
    <string name="audio_handset_out_ear">耳机已拔出,请用听筒接听</string>
    <string name="audio_handset_out_speaker">耳机已拔出,当前为免提模式</string>
    <string name="close_handsfree">已关闭免提</string>
    <string name="open_handsfree">已开启免提</string>
    <string name="close_silence">已关闭静音</string>
    <string name="open_silence">已开启静音</string>
    <string name="video_no_connect">连接失败，请检查你的网络设置</string>
    <string name="cp_tip_unkown_error">未知错误，稍后再试</string>
    <string name="voip_call_busy">对方忙</string>
    <string name="voip_call_timeout">呼叫超时</string>
    <string name="voip_call_fail">未接通</string>
    <string name="voip_network_disconnect">网络异常, 通话中断!</string>
    <string name="voip_hanpup_by">对方已挂断,通话结束</string>
    <string name="voip_interruption_phone_in">对方正在通电话, 被迫挂断</string>
    <string name="voip_interruption_battery_low">对方电量过低,被迫挂断</string>



    <string name="send_again">是否重新发送</string>

    <string name="voice_too_short">请录制至少1秒钟语音</string>
    <string name="audio_duration">%2d\'\'</string>
    <string name="sdcard_unavailable">无可用SD卡,请插入或者连接SD卡</string>
    <string name="record_space_not_enough">因手机空间不足，该条语音发送失败</string>
    <string name="record_access_denied">录音失败</string>
    <string name="psms_press_for_talking">按住说话</string>
    <string name="psms_release_for_finish">松开结束</string>
    <string name="psms_cancel_send">取消发送</string>
    <string name="psms_cancel_send_prom">移动到这里取消</string>
    <string name="psms_voice_is_to_short">录音时间太短</string>
    <string name="switch_to_handset">已切换至听筒模式</string>
    <string name="switch_to_speaker">已切换至扬声器模式</string>
    <string name="audio_play_err">播放错误</string>

    <string name="new_message_notify_title">新消息通知</string>
    <string name="menu_chat_setting">聊天设置</string>
    <string name="title_activity_chat_setting">ChatSettingActivity</string>
    <string name="quit_conversation">删除并退出</string>
    <string name="add_new_member_tips">添加新的会话成员</string>
    <string name="add_new_member_error">添加会话成员失败</string>
    <string name="start_recording">开始录音</string>
    <string name="quiting">退群中...</string>

    <string name="choose_parent">选择分类</string>
    <string name="choose_games">选择比赛</string>
</resources>
