<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize"
            android:background="@android:color/background_light"
            android:text="选择分类"/>
        <Button
            android:id="@+id/arrow2"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:background="@drawable/pt_arrow1"/>
    </RelativeLayout>
    <TextView
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/abc_input_method_navigation_guard"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginTop="149dp"
            android:background="@color/abc_input_method_navigation_guard"/>
        <TextView
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginTop="249dp"
            android:background="@color/abc_input_method_navigation_guard"/>
        <TextView
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginTop="349dp"
            android:background="@color/abc_input_method_navigation_guard"/>
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height"
                    android:background="@drawable/bg_button"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="60dp"
                    android:gravity="center"
                    android:textSize="@dimen/textsize"
                    android:text="计算机"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height"
                    android:background="@drawable/bg_button"
                    android:layout_marginBottom="@dimen/height"
                    android:layout_marginTop="@dimen/height2"
                    android:gravity="center"
                    android:textSize="@dimen/textsize"
                    android:text="数学"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height"
                    android:background="@drawable/bg_button"
                    android:layout_marginBottom="@dimen/height2"
                    android:layout_marginTop="@dimen/height2"
                    android:gravity="center"
                    android:textSize="@dimen/textsize"
                    android:text="创业"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height"
                    android:background="@drawable/bg_button"
                    android:gravity="center"
                    android:textSize="@dimen/textsize"
                    android:text="其他"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow>
                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/interval"
                            android:text="@string/t11"
                            android:background="@drawable/login_button_selector11"
                            android:textSize="@dimen/textsize"/>
                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/interval"
                            android:text="@string/t12"
                            android:background="@drawable/login_button_selector12"
                            android:textSize="@dimen/textsize"/>
                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/t13"
                            android:background="@drawable/login_button_selector13"
                            android:textSize="@dimen/textsize"/>
                    </TableRow>
                    <TableRow>
                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/interval"
                            android:layout_marginRight="@dimen/interval"
                            android:text="@string/t14"
                            android:background="@drawable/login_button_selector14"
                            android:textSize="@dimen/textsize"/>
                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/interval"
                            android:layout_marginRight="@dimen/interval"
                            android:text="@string/t15"
                            android:background="@drawable/login_button_selector15"
                            android:textSize="@dimen/textsize"/>
                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/interval"
                            android:text="@string/t16"
                            android:background="@drawable/login_button_selector16"
                            android:textSize="@dimen/textsize"/>
                    </TableRow>
                    <TableRow>
                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/interval"
                            android:layout_marginRight="@dimen/interval"
                            android:text="@string/t17"
                            android:background="@drawable/login_button_selector17"
                            android:textSize="@dimen/textsize"/>
                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/interval"
                            android:layout_marginRight="@dimen/interval"
                            android:text="@string/t18"
                            android:background="@drawable/login_button_selector18"
                            android:textSize="@dimen/textsize"/>
                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/interval"
                            android:layout_marginRight="@dimen/interval"
                            android:text="@string/t19"
                            android:background="@drawable/login_button_selector19"
                            android:textSize="@dimen/textsize"/>
                    </TableRow>
                </TableLayout>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow>
                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/interval"
                            android:layout_marginRight="@dimen/interval"
                            android:text="@string/t21"
                            android:background="@drawable/login_button_selector21"
                            android:textSize="@dimen/textsize"/>
                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/interval"
                            android:text="@string/t22"
                            android:background="@drawable/login_button_selector22"
                            android:textSize="@dimen/textsize"/>
                    </TableRow>
                    <TableRow>
                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/interval"
                            android:layout_marginRight="@dimen/interval"
                            android:text="@string/t23"
                            android:background="@drawable/login_button_selector23"
                            android:textSize="@dimen/textsize"/>
                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/interval"
                            android:text="@string/t24"
                            android:background="@drawable/login_button_selector24"
                            android:textSize="@dimen/textsize"/>
                    </TableRow>
                    <TableRow>
                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/interval"
                            android:layout_marginRight="@dimen/interval"
                            android:text="@string/t31"
                            android:background="@drawable/login_button_selector31"
                            android:textSize="@dimen/textsize"/>
                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/interval"
                            android:text="@string/t32"
                            android:background="@drawable/login_button_selector32"
                            android:textSize="@dimen/textsize"/>
                    </TableRow>
                    <TableRow>
                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/interval"
                            android:layout_marginRight="@dimen/interval"
                            android:text="@string/t33"
                            android:background="@drawable/login_button_selector33"
                            android:textSize="@dimen/textsize"/>
                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/interval"
                            android:text="@string/t34"
                            android:background="@drawable/login_button_selector34"
                            android:textSize="@dimen/textsize"/>
                    </TableRow>
                </TableLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <Button
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/interval"
                        android:layout_marginRight="@dimen/interval"
                        android:text="@string/t41"
                        android:background="@drawable/login_button_selector41"
                        android:gravity="center"
                        android:textSize="@dimen/textsize"/>
                    <Button
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/interval"
                        android:layout_marginRight="@dimen/interval"
                        android:text="@string/t42"
                        android:background="@drawable/login_button_selector42"
                        android:gravity="center"
                        android:textSize="@dimen/textsize"/>
                    <Button
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/interval"
                        android:layout_marginRight="@dimen/interval"
                        android:text="@string/t43"
                        android:background="@drawable/login_button_selector43"
                        android:gravity="center"
                        android:textSize="@dimen/textsize"/>
                    <Button
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/interval"
                        android:layout_marginRight="@dimen/interval"
                        android:text="@string/t44"
                        android:background="@drawable/login_button_selector44"
                        android:gravity="center"
                        android:textSize="@dimen/textsize"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
